# RF24Revamped

./: RF24.h  library.json
.github/workflows/: build_arduino.yml  build_linux.yml  build_platformIO.yml  build_rp2xxx.yml  clang_format.yml  doxygen.yml
docs/: Doxyfile  linux_install.md  main_page.md  using_cmake.md
examples/linux/: readme.md
utility/: CMakeLists.txt
